force-app/main/default/objects/SalesCadenceTrackerEvent__e/SalesCadenceTrackerEvent__e.object-meta.xml
<CustomObject>
    <label>Sales Cadence Tracker Event</label>
    <pluralLabel>Sales Cadence Tracker Events</pluralLabel>
</CustomObject>