force-app/main/default/objects/SalesCadenceTrackerEvent__e/fields/CadenceId__c.field-meta.xml
<CustomField>
    <fullName>CadenceId__c</fullName>
    <label>Cadence Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>