force-app/main/default/objects/SalesCadenceTrackerEvent__e/fields/TargetId__c.field-meta.xml
<CustomField>
    <fullName>TargetId__c</fullName>
    <label>Target Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>