force-app/main/default/objects/SalesCadenceTrackerEvent__e/fields/TrackerId__c.field-meta.xml
<CustomField>
    <fullName>TrackerId__c</fullName>
    <label>Tracker Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>